@@ -1,7 +1,12 @@
 2004-07-07  Richard Hult  <richard@imendio.com>
 
+	* planner.spec.in: Put the sql storage in the right
+	package. Redirect mime updating to /dev/null.
+
 	* docs/user-guide/C/planner.xml: Fix up.
 
+	* src/planner-window.c: Brand a bit.
+	
 2004-07-05  Richard Hult  <richard@imendio.com>
 
 	* configure.in: Bump.
